# MagicCube

./: .gitignore  CMakeLists.txt  README.md
GLSL/: shader.fs  shader.vs
include/: Shader.hpp  camera.h  cube.h  drawer.h  recover.h  utility.h
include/glad/: glad.h
src/: Shader.cpp  cube.cpp  drawer.cpp  glad.c  main.cpp  recover.cpp  stb_imagefile.cpp  utility.cpp
test/: test.cpp
